# pico_uf2_autoloader

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
