[package]
name = "pico_uf2_autoloader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui_extras = "0.31.1"
env_logger = "0.11.7"
rfd = "0.15.3"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
